# rtnnigen

./: .gitignore  Changelog.md  Keras2PLC.ipynb  LICENSE  README.md  Software architecture.drawio  code_test_model.txt  keras2plc.py  layer1_weight.csv  pyproject.toml  variable_def.txt  variable_test_model.txt
RTNNI/RTNNI/: RTNNI.sln
RTNNI/RTNNI/RTNNI/: RTNNI.tsproj
TwinCAT/: FB_MatrixMultiplication.TcPOU  Matrix.TcDUT
TwinCAT/keras2PLC/: keras2PLC.project.~u  keras2PLC.sln
TwinCAT/package/: RTNNI.library  RTNNIgen.library
examples/: .gitignore  test_write_ST_files.ipynb
examples/Python/: model_create.ipynb  test_model.keras
experiment/exe_time/: analyse_act.ipynb  device.txt  exe_time_measurement_relu_arch.pkl  measure_exe_time.ipynb  to_latex.ipynb
experiment/loading_time/: create_test_weights.ipynb  measure_loading.ipynb
experiment/precision/: analyse.ipynb  analyse_real.ipynb  measure_precision.ipynb
resources/: code.txt  layer1_bias.csv  norm_mean_in.csv  norm_std_in.csv  test_model.keras  traj_sender.ipynb  weights-best.weights.keras
resources/diagram/: use case.drawio
src/keras2plc/: __init__.py  gen_st.py  keras2plc.py  parse_model.py  read_model.py  template_strings.py
src/nnigen/: __init__.py  gen_st.py  nnigen.py  parse_model.py  read_model.py  template_strings.py
tests/: Keras2PLC.ipynb  model_create.ipynb  test_crc.ipynb  test_exe_time.ipynb  test_model.keras  test_pyads_get_tc_version_no.ipynb  test_write_ST_files.ipynb
tests/test_struct_import_export/: AllWeights.txt  export_all_weights.py  import_one_layer.py
(+140 files in other folders)
